# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  09 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fix chroot handling and enable custom env vars for start-stop-daemon
    binary #101642, thanks to Quequero. 

  07 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fix some vlan/bridge/tap/neplugd/ifplugd interdependencies #107406.   

  06 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fixup IPv6 documentation and support, #108143.

  16 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    iwconfig and wpa_supplicant now check to see if /proc/net/wireless exists
    before checking for extensions, #106036

  14 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    netplug module renamed to netplugd for consistency

    pppd module added, #53954 thanks to Alin Nastac

  13 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Changed net.lo depend from isdn4linux to isdn, #102846

  12 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Set essid before mode for ad-hoc/master configurations, #105452

    Fixed force_any associate order option, #99256

  08 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Added ifplugd module, but we prefer netplug by default

  07 Sep 2005; Roy Marples <uberlord@gentoo.org>:
 
    replace the apipa module with a generic arping module which can now
    do gateway detection and apply a configuration for it as well as the
    apipa stuff

    updated env_whitelist so that nothing is allowed by default

    system module now runs through pre instead of post and is run by
    lo as well, so dns_ options can be configured for it

    netplug and wpa_supplicant understand negative timeouts to be defined
    as "return immediately and don't wait for success"

    dns options and sortlist now get merged in resolv.conf too

    bridge error message regarding the kernel module should work with
    newer versions of bridge-utils
